# pendulum-lab

./: .gitignore  Cargo.toml  README.md
n-pendulum/: Cargo.toml
n-pendulum/src/: gui.rs  main.rs  pendulum.rs  solver.rs
pendulum_wave/: Cargo.toml
pendulum_wave/src/: app.rs  main.rs  pendulum.rs  simulation.rs
single-pendulum/: Cargo.toml
single-pendulum/src/: app.rs  main.rs  physics.rs  plots.rs  ui.rs
